# serializer version: 1
# name: test_available_locales[bg_BG]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[cs_CZ]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[da_DK]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_AT]
  dict({
    'gigya-api-key': '3__B4KghyeUb0GlpU62ZXKrjSfb7CPzwBS368wioftJUL5qXE0Z_sSy0rX69klXuHy',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_CH]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_DE]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[en_GB]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[en_IE]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[es_ES]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[es_MX]
  dict({
    'gigya-api-key': '4_yTFqPSsGxVyRXPZUM7t1Iw',
    'gigya-root-url': 'https://accounts.us1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-usw2.wrd-aws.com',
  })
# ---
# name: test_available_locales[fi_FI]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_BE]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_CH]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_FR]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_LU]
  dict({
    'gigya-api-key': '3_zt44Wl_wT9mnqn-BHrR19PvXj3wYRPQKLcPbGWawlatFR837KdxSZZStbBTDaqnb',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[hr_HR]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[hu_HU]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[it_CH]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[it_IT]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[nl_BE]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[nl_NL]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[no_NO]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[pl_PL]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[pt_PT]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[ro_RO]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[ru_RU]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sk_SK]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sl_SI]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sv_SE]
  dict({
    'gigya-api-key': '3_VgdkgtIRH3AdHvJm-cjV2ug2EFE0lxt0IJzMC4MFqZjFpn_GYFXVdNZ19L7wZX0N',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
